package jp.co.cyberagent.stf.input.agent.proto;

option java_outer_classname = "AgentProto";

enum InputAction {
  KEYDOWN = 0;
  KEYUP = 1;
  KEYPRESS = 2;
  TYPE = 3;
  WAKE = 4;
}

message InputEvent {
  required InputAction action = 1;
  optional int32 keyCode = 2;
  optional bool shiftKey = 3;
  optional bool ctrlKey = 4;
  optional bool altKey = 5;
  optional bool metaKey = 6;
  optional bool symKey = 7;
  optional bool functionKey = 8;
  optional bool capsLockKey = 9;
  optional bool scrollLockKey = 10;
  optional bool numLockKey = 11;
  optional string text = 12;
}
